--- a/atvav1caw.html
+++ b/atvav1caw.html
@@ -10,7 +10,7 @@
 
 .all-browsers > h1, .browser {
   margin: 10px;
-  padding: 5px;
+  padding: 25px;
 }
 
 .browser {
@@ -23,7 +23,7 @@
 }
 
 aside {
-  width: 15%;
+  width: 30%;
   padding-left: 15px;
   margin-left: 15px;
   float: right;
@@ -31,11 +31,29 @@ aside {
   background-color: rgb(231, 83, 83);
 }
 
+details > summary {
+  padding: 4px;
+  width: 200px;
+  background-color: #eeeeee;
+  border: none;
+  box-shadow: 1px 1px 2px #bbbbbb;
+  cursor: pointer;
+}
+
+details > p {
+  background-color: #eeeeee;
+  padding: 4px;
+  margin: 0;
+  box-shadow: 1px 1px 2px #bbbbbb;
+}
+
 </style>
 </head>
 <body>
 
 
+
+<!--Cabeçalho-->
 <article>
     <header>
         <h1>What Does WWF Do?</h1>
@@ -45,6 +63,7 @@ aside {
     and build a future in which humans live in harmony with nature.</p>
 </article>
 
+<!--Navegação-->
 <nav>
     <a href="/html/">HTML</a> |
     <a href="/css/">CSS</a> |
@@ -52,24 +71,43 @@ aside {
     <a href="/jquery/">jQuery</a>
 </nav>
 
+<!--Texto lateral-->
     <aside>
         <p>The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
     </aside>
 
+
+<!--Texto de baixo do menu-->
+<blockquote cite="http://www.worldwildlife.org/who/index.html">
+    For nearly 60 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by more than one million members in the United States and close to five million globally.
+</blockquote>
+
+<br>
+<br>
+
+<!--Lista de itens-->
 <article class="all-browsers">
   <h1>Most Popular Browsers</h1>
+
+<!--Primeiro item da lista-->
   <article class="browser">
     <h2>Google Chrome</h2>
+    <img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
     <p>Google Chrome is a web browser developed by Google, released in 2008. Chrome is the world's most popular web browser today!</p>
     <details>
         <summary>Epcot Center</summary>
-        <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+        <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.<button>clique aqui</button></p>
+
     </details>
 </article>
+
+<!--Segundo item da lista-->
   <article class="browser">
     <h2>Mozilla Firefox</h2>
     <p>Mozilla Firefox is an open-source web browser developed by Mozilla. Firefox has been the second most popular web browser since January, 2018.</p>
   </article>
+
+<!--Terceiro item da lista-->
   <article class="browser">
     <h2>Microsoft Edge</h2>
     <p>Microsoft Edge is a web browser developed by Microsoft, released in 2015. Microsoft Edge replaced Internet Explorer.</p>
@@ -78,7 +116,7 @@ aside {
 
 
 
-
+<!--Rodape-->
 <footer>
     <p>Author: Hege Refsnes</p>
     <p><a href="mailto:hege@example.com">hege@example.com</a></p>
