--- a/atvav1caw.html
+++ b/atvav1caw.html
@@ -102,9 +102,9 @@ details > p {
 </article>
 
 <!--Segundo item da lista-->
-  <article class="browser">
-    <h2>Mozilla Firefox</h2>
-    <p>Mozilla Firefox is an open-source web browser developed by Mozilla. Firefox has been the second most popular web browser since January, 2018.</p>
+  <article style="background-color:rgb(255, 255, 255);margin: 10px;padding: 25px;">
+    <h2 style="margin: 4px;font-size: 90%;">Mozilla Firefox</h2>
+    <p style="margin: 4px;font-size: 90%;">Mozilla Firefox is an open-source web browser developed by Mozilla. Firefox has been the second most popular web browser since January, 2018.</p>
   </article>
 
 <!--Terceiro item da lista-->
