mudanca 3 atv av1 caw

--- a/atvav1caw.html
+++ b/atvav1caw.html
@@ -2,50 +2,6 @@
 <html>
 <head>
 <style>
-.all-browsers {
-  margin: 0;
-  padding: 5px;
-  background-color: lightgray;
-}
-
-.all-browsers > h1, .browser {
-  margin: 10px;
-  padding: 25px;
-}
-
-.browser {
-  background: white;
-}
-
-.browser > h2, p {
-  margin: 4px;
-  font-size: 90%;
-}
-
-aside {
-  width: 30%;
-  padding-left: 15px;
-  margin-left: 15px;
-  float: right;
-  font-style: italic;
-  background-color: rgb(231, 83, 83);
-}
-
-details > summary {
-  padding: 4px;
-  width: 200px;
-  background-color: #eeeeee;
-  border: none;
-  box-shadow: 1px 1px 2px #bbbbbb;
-  cursor: pointer;
-}
-
-details > p {
-  background-color: #eeeeee;
-  padding: 4px;
-  margin: 0;
-  box-shadow: 1px 1px 2px #bbbbbb;
-}
 
 </style>
 </head>
@@ -72,7 +28,7 @@ details > p {
 </nav>
 
 <!--Texto lateral-->
-    <aside>
+    <aside style="width: 30%;padding-left: 15px;margin-left: 15px;float: right;font-style: italic;background-color: rgb(231, 83, 83);">
         <p>The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
     </aside>
 
@@ -86,32 +42,52 @@ details > p {
 <br>
 
 <!--Lista de itens-->
-<article class="all-browsers">
-  <h1>Most Popular Browsers</h1>
+<article style="margin: 0;padding: 5px;background-color: lightgray;">
+  <h1 style="margin: 10px;padding: 25px;">Most Popular Browsers</h1>
 
 <!--Primeiro item da lista-->
-  <article class="browser">
-    <h2>Google Chrome</h2>
-    <img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
-    <p>Google Chrome is a web browser developed by Google, released in 2008. Chrome is the world's most popular web browser today!</p>
-    <details>
-        <summary>Epcot Center</summary>
-        <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.<button>clique aqui</button></p>
+<article style="background-color:rgb(255, 255, 255);margin: 10px;padding: 25px;">
+  <h2 style="margin: 4px;font-size: 90%;">Mozilla Firefox</h2>
+  <p style="margin: 4px;font-size: 90%;">Mozilla Firefox is an open-source web browser developed by Mozilla. Firefox has been the second most popular web browser since January, 2018.</p>
+  
+  <!--Imagem do produto-->
+  <img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
 
-    </details>
+  <!--Detalhhes ou mais informações-->
+  <details>
+    <summary style="padding: 4px;width: 200px;background-color: #eeeeee;border: none;box-shadow: 1px 1px 2px #bbbbbb;cursor: pointer;">Epcot Center</summary>
+    <p style="background-color: #eeeeee;padding: 4px;margin: 0;box-shadow: 1px 1px 2px #bbbbbb;">Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.<button>clique aqui</button></p>
+  </details>
 </article>
 
 <!--Segundo item da lista-->
   <article style="background-color:rgb(255, 255, 255);margin: 10px;padding: 25px;">
     <h2 style="margin: 4px;font-size: 90%;">Mozilla Firefox</h2>
     <p style="margin: 4px;font-size: 90%;">Mozilla Firefox is an open-source web browser developed by Mozilla. Firefox has been the second most popular web browser since January, 2018.</p>
+    
+    <!--Imagem do produto-->
+    <img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
+  
+    <!--Detalhhes ou mais informações-->
+    <details>
+      <summary style="padding: 4px;width: 200px;background-color: #eeeeee;border: none;box-shadow: 1px 1px 2px #bbbbbb;cursor: pointer;">Epcot Center</summary>
+      <p style="background-color: #eeeeee;padding: 4px;margin: 0;box-shadow: 1px 1px 2px #bbbbbb;">Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.<button>clique aqui</button></p>
+    </details>
   </article>
 
 <!--Terceiro item da lista-->
-  <article class="browser">
-    <h2>Microsoft Edge</h2>
-    <p>Microsoft Edge is a web browser developed by Microsoft, released in 2015. Microsoft Edge replaced Internet Explorer.</p>
-  </article>
+<article style="background-color:rgb(255, 255, 255);margin: 10px;padding: 25px;">
+  <h2 style="margin: 4px;font-size: 90%;">Mozilla Firefox</h2>
+  <p style="margin: 4px;font-size: 90%;">Mozilla Firefox is an open-source web browser developed by Mozilla. Firefox has been the second most popular web browser since January, 2018.</p>
+  
+  <!--Imagem do produto-->
+  <img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
+
+  <!--Detalhhes ou mais informações-->
+  <details>
+    <summary style="padding: 4px;width: 200px;background-color: #eeeeee;border: none;box-shadow: 1px 1px 2px #bbbbbb;cursor: pointer;">Epcot Center</summary>
+    <p style="background-color: #eeeeee;padding: 4px;margin: 0;box-shadow: 1px 1px 2px #bbbbbb;">Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.<button>clique aqui</button></p>
+  </details>
 </article>
 
 
