modf final atv aula 7

--- a/DOUGLAS RANGEL - Exercicio_CSS.html
+++ b/DOUGLAS RANGEL - Exercicio_CSS.html
@@ -46,9 +46,9 @@
     
     <body>
         <h1>
-            Sociedade e Natureza
+            Sociedade e 
             <p>
-                sabonete
+                 Natureza
             </p>
         </h1>
 
