primeira adiçao de exs aula 7 html

--- a/DOUGLAS RANGEL - Exercicio_CSS.html
+++ b/DOUGLAS RANGEL - Exercicio_CSS.html
@@ -48,7 +48,7 @@
         <h1>
             Sociedade e 
             <p>
-                 Natureza
+                 natureza
             </p>
         </h1>
 
