--- a/primeiro html.html
+++ b/primeiro html.html
@@ -3,7 +3,7 @@
     <head>
         <title>Pagina douglas</title>
     </head>
-    <body style="background-color:mediumseagreen;2">
+    <body style="background-color:mediumseagreen;">
         
         <h1 style="text-align:center;color: orange;background-color: white;">Hortifruit do Douglas</h1>
         
