enviando tudo pra pasta

--- a/douglas_2210478300006_TrabAv1.html
+++ b/douglas_2210478300006_TrabAv1.html
@@ -272,8 +272,8 @@
       </div>
       <br>
       <!--botão-->
-      <div class="button" style="color: lightgray;">
-        <button type="reset" >Concluído</button>
+      <div class="button" >
+        <button type="reset" style="color: pink; cursor: pointer; border: none; opacity: 0.7;">Concluído</button>
       </div>
      </div>
       
