botoes verde, vermelho, mesmo projota

--- a/pagina com css e js externos/parteHtml.html
+++ b/pagina com css e js externos/parteHtml.html
@@ -30,9 +30,11 @@
             <article>
                 <p>isso deve estar centralizado.</p>
                 <p id="demonst">Sou um pato.</p>
+                <p id="secreto"></p>
                 <button type="button" class="botaoBonito" onclick="myFunction()">Me aperte</button>
-                <button type="button" class="botaoBonito colorido verde">Botao verde</button>
-                <button class="botaoBonito colorido vermelho">Botao vermelho</button>
+                <button type="button" class="botaoBonito colorido verde" onclick="secretoVerde()">Botao verde</button>
+                <button class="botaoBonito colorido vermelho" onclick="secretoVermelho()">Botao vermelho</button>
+                <button class="botaoBonito" onclick="myFunReverse()">Quero voltar a pato!</button>
             </article>
         </main>
 
