alteracoes 9/11 pg css js ext

--- a/pagina com css e js externos/parteHtml.html
+++ b/pagina com css e js externos/parteHtml.html
@@ -18,7 +18,7 @@
         </header>
 
         <!--ao lado, observe que deve vir antes do que seras centralizado-->
-        <aside class="caixas">
+        <aside class="caixas diferentes">
             <article>
                 <p>Isso deve aparecer ao lado. E conforme isso cresce a main diminui.</p>
             </article>
@@ -31,10 +31,28 @@
                 <p>isso deve estar centralizado.</p>
                 <p id="demonst">Sou um pato.</p>
                 <p id="secreto"></p>
-                <button type="button" class="botaoBonito" onclick="myFunction()">Me aperte</button>
-                <button type="button" class="botaoBonito colorido verde" onclick="secretoVerde()">Botao verde</button>
-                <button class="botaoBonito colorido vermelho" onclick="secretoVermelho()">Botao vermelho</button>
-                <button class="botaoBonito" onclick="myFunReverse()">Quero voltar a pato!</button>
+                <ul>
+                    <li>
+                        <button type="button" class="botaoBonito" onclick="myFunction()">Me aperte</button>
+                    </li>
+                    <br>
+                    <li>
+                        <button class="botaoBonito colorido verde" onclick="secretoVerde()">Botao verde</button> 
+                    </li>
+                    <br>
+                    <li>
+                        <button class="botaoBonito colorido vermelho" onclick="secretoVermelho()">Botao vermelho</button>
+                    </li>
+                    <br>
+                    <li>
+                        <button class="botaoBonito" onclick="myFunReverse()">Quero voltar a pato!</button>
+                    </li>
+                    <br>
+                    <li>
+                        <button type="button" class="botaoBonito" onclick="apagar()">Voltar a como era</button>
+                    </li>
+                </ul>
+                
             </article>
         </main>
 
