Mudanças nas pastas de projetos

--- a/pagina com css e js externos/segundaPag.html
+++ b/pagina com css e js externos/segundaPag.html
@@ -30,5 +30,14 @@
            </form>
         </article>
     </main>
+    
+    <section class="caixas">
+        <article>
+            <p>Retorna um valor armazenado</p>
+            <p>Digite um valor <input  type="text" size="20" id="buscado" value="Digite a ser buscado" onfocus="limpaCampo(5);"></p>
+            <button class="botaoBonito colorido" onclick="buscar()">Buscar valor</button> 
+            <p id="retornado"></p>
+        </article>
+    </section>
 </body>
 </html>
